# algds2024

lab2/: CMakeLists (5).txt  README.md  splay_tree.h
lab2/tests/: splay_tree_tests.cpp
tests/: CMakeLists.txt
